--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -35,132 +35,171 @@
 
 <!-- TAB 1 TEAM CONFIG -->
 <div data-tabcontent='1' hidden>
-  <div class='box form-group'>
-    <h3>{{ 'Configure your Team'|trans }}</h3>
+  <h3 class='p-2 pl-3 section-title'>{{ 'Configure your Team'|trans }}</h3>
+
+  <div class='pl-3 mt-2'>
+    <div class='d-flex justify-content-between'>
+      <label for='announcement' class='col-form-label'>{{ 'Announcement'|trans }}</label>
+      <input class='form-control col-md-4' data-trigger='blur' data-model='teams/{{ App.Users.userData.team }}' data-target='announcement' type='text' id='announcement' name='announcement' value='{{ teamConfigArr.announcement }}' />
+    </div>
+    <p class='smallgray'>{{ "The following text will be displayed to all users on all pages while it's active."|trans }}</p>
     <hr>
 
-    <label for='announcement'>{{ 'Announcement'|trans }}</label>
-    <p class='smallgray'>{{ "The following text will be displayed to all users on all pages while it's active."|trans }}</p>
-    <input class='form-control col-md-4' type='text' id='announcement' name='announcement' value='{{ teamConfigArr.announcement }}' />
-
-    <label for='deletable_xp'>{{ 'Users can delete experiments:'|trans }}</label>
-    <select class='form-control col-md-4' name='deletable_xp' id='deletable_xp'>
-      <option value='1'{{ teamConfigArr.deletable_xp ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
-      <option value='0'{{ not teamConfigArr.deletable_xp ? " selected='selected'" }}>{{ 'No'|trans }}</option>
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='deletable_xp' class='col-form-label'>{{ 'Users can delete experiments'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='teams/{{ App.Users.userData.team }}' data-target='deletable_xp' {{ teamConfigArr.deletable_xp == 1 ? 'checked="checked"' }} id='deletable_xp'>
+        <span class='slider'></span>
+      </label>
+    </div>
     <p class='smallgray'>{{ 'An admin account will always be able to delete experiments.'|trans }}</p>
+    <hr>
 
-    <label for='deletable_item'>{{ 'Users can delete items:'|trans }}</label>
-    <select class='form-control col-md-4' name='deletable_item' id='deletable_item'>
-      <option value='1'{{ teamConfigArr.deletable_item ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
-      <option value='0'{{ not teamConfigArr.deletable_item ? " selected='selected'" }}>{{ 'No'|trans }}</option>
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='deletable_item' class='col-form-label'>{{ 'Users can delete items'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='teams/{{ App.Users.userData.team }}' data-target='deletable_item' {{ teamConfigArr.deletable_item == 1 ? 'checked="checked"' }} id='deletable_item'>
+        <span class='slider'></span>
+      </label>
+    </div>
     <p class='smallgray'>{{ 'An admin account will always be able to delete items.'|trans }}</p>
+    <hr>
 
-    <label for='user_create_tag'>{{ 'Users can create tags:'|trans }}</label>
-    <select class='form-control col-md-4' name='user_create_tag' id='user_create_tag'>
-      <option value='1'{{ teamConfigArr.user_create_tag ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
-      <option value='0'{{ not teamConfigArr.user_create_tag ? " selected='selected'" }}>{{ 'No'|trans }}</option>
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='user_create_tag' class='col-form-label'>{{ 'Users can create tags'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='teams/{{ App.Users.userData.team }}' data-target='user_create_tag' {{ teamConfigArr.user_create_tag == 1 ? 'checked="checked"' }} id='user_create_tag'>
+        <span class='slider'></span>
+      </label>
+    </div>
     <p class='smallgray'>{{ 'An admin account will always be able to create tags.'|trans }}</p>
+    <hr>
 
-    <label for='force_exp_tpl'>{{ 'Force experiment template use:'|trans }}</label>
-    <select class='form-control col-md-4' name='force_exp_tpl' id='force_exp_tpl'>
-      <option value='1'{{ teamConfigArr.force_exp_tpl ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
-      <option value='0'{{ not teamConfigArr.force_exp_tpl ? " selected='selected'" }}>{{ 'No'|trans }}</option>
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='force_exp_tpl' class='col-form-label'>{{ 'Force experiment template use'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='teams/{{ App.Users.userData.team }}' data-target='force_exp_tpl' {{ teamConfigArr.force_exp_tpl == 1 ? 'checked="checked"' }} id='force_exp_tpl'>
+        <span class='slider'></span>
+      </label>
+    </div>
+    <hr>
 
-    <label for='public_db'>{{ 'Anonymous visitors can see database items:'|trans }}</label>
-    <select class='form-control col-md-4' name='public_db' id='public_db'>
-      <option value='1'{{ teamConfigArr.public_db ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
-      <option value='0'{{ not teamConfigArr.public_db ? " selected='selected'" }}>{{ 'No'|trans }}</option>
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='public_db' class='col-form-label'>{{ 'Anonymous visitors can see database items'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='teams/{{ App.Users.userData.team }}' data-target='public_db' {{ teamConfigArr.public_db == 1 ? 'checked="checked"' }} id='public_db'>
+        <span class='slider'></span>
+      </label>
+    </div>
+    <hr>
 
-    <label for='link_name'>{{ 'Name of the link in the top menu:'|trans }}</label>
-    <input class='form-control col-md-4' type='text' value='{{ teamConfigArr.link_name }}' name='link_name' id='link_name' />
+    <div class='d-flex justify-content-between'>
+      <label for='link_name' class='col-form-label'>{{ 'Name of the link in the top menu'|trans }}</label>
+      <input class='form-control col-md-4' data-trigger='blur' data-model='teams/{{ App.Users.userData.team }}' data-target='link_name' type='text' value='{{ teamConfigArr.link_name }}' name='link_name' id='link_name' />
+    </div>
+    <hr>
 
-    <label for='link_href'>{{ 'Address where this link should point:'|trans }}</label>
-    <input class='mb-4 form-control col-md-4' type='text' value='{{ teamConfigArr.link_href }}' name='link_href' id='link_href' />
+    <div class='d-flex justify-content-between'>
+      <label for='link_href' class='col-form-label'>{{ 'Address where this link should point'|trans }}</label>
+      <input class='form-control col-md-4' type='url' data-trigger='blur' data-model='teams/{{ App.Users.userData.team }}' data-target='link_href' value='{{ teamConfigArr.link_href }}' name='link_href' id='link_href' />
+    </div>
+    <hr>
 
-    <label for='do_force_canread'>{{ 'Enforce read permissions?'|trans }}</label>
-    <select class='form-control col-md-4' name='do_force_canread' id='do_force_canread'>
-      <option value='1'{{ teamConfigArr.do_force_canread ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
-      <option value='0'{{ not teamConfigArr.do_force_canread ? " selected='selected'" }}>{{ 'No'|trans }}</option>
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='do_force_canread' class='col-form-label'>{{ 'Enforce read permissions?'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='teams/{{ App.Users.userData.team }}' data-target='do_force_canread' {{ teamConfigArr.do_force_canread == 1 ? 'checked="checked"' }} id='do_force_canread'>
+        <span class='slider'></span>
+      </label>
+    </div>
     <p class='smallgray'>{{ 'Select if you want to enforce read permissions on experiments'|trans }}</p>
 
-    <label for='force_canread'>{{ 'Enforced read permissions on experiments'|trans }}</label>
-    <select class='form-control col-md-4' name='force_canread' id='force_canread'>
-      {% for key, value in visibilityArr %}
-        <option value='{{ key }}' {{ teamConfigArr.force_canread|extractJson('base') == key ? " selected='selected'" }}>{{ value|trans }}</option>
-      {% endfor %}
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='force_canread' class='col-form-label'>{{ 'Enforced read permissions on experiments'|trans }}</label>
+      <select class='form-control col-md-4 forceCanSelect' data-id='{{ App.Users.userData.team }}' data-target='force_canread' id='force_canread'>
+        {% for key, value in visibilityArr %}
+          <option value='{{ key }}' {{ teamConfigArr.force_canread|extractJson('base') == key ? " selected='selected'" }}>{{ value|trans }}</option>
+        {% endfor %}
+      </select>
+    </div>
     <p class='smallgray'>{{ 'Enforce the read permission for all experiments of users in this team.'|trans }}</p>
+    <hr>
 
-    <label for='do_force_canwrite'>{{ 'Enforce write permissions?'|trans }}</label>
-    <select class='form-control col-md-4' name='do_force_canwrite' id='do_force_canwrite'>
-      <option value='1'{{ teamConfigArr.do_force_canwrite ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
-      <option value='0'{{ not teamConfigArr.do_force_canwrite ? " selected='selected'" }}>{{ 'No'|trans }}</option>
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='do_force_canwrite' class='col-form-label'>{{ 'Enforce write permissions?'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='teams/{{ App.Users.userData.team }}' data-target='do_force_canwrite' {{ teamConfigArr.do_force_canwrite == 1 ? 'checked="checked"' }} id='do_force_canwrite'>
+        <span class='slider'></span>
+      </label>
+    </div>
     <p class='smallgray'>{{ 'Select if you want to enforce write permissions on experiments'|trans }}</p>
 
-    <label for='force_canwrite'>{{ 'Enforced write permissions on experiments'|trans }}</label>
-    <select class='form-control col-md-4' name='force_canwrite' id='force_canwrite'>
-      {% for key, value in visibilityArr %}
-        <option value='{{ key }}' {{ teamConfigArr.force_canwrite|extractJson('base') == key ? " selected='selected'" }}>{{ value|trans }}</option>
-      {% endfor %}
-    </select>
+    <div class='d-flex justify-content-between'>
+      <label for='force_canwrite' class='col-form-label'>{{ 'Enforced write permissions on experiments'|trans }}</label>
+      <select class='form-control col-md-4 forceCanSelect' data-id='{{ App.Users.userData.team }}' data-target='force_canwrite' id='force_canwrite'>
+        {% for key, value in visibilityArr %}
+          <option value='{{ key }}' {{ teamConfigArr.force_canwrite|extractJson('base') == key ? " selected='selected'" }}>{{ value|trans }}</option>
+        {% endfor %}
+      </select>
+    </div>
     <p class='smallgray'>{{ 'Enforce the write permission for all experiments of users in this team.'|trans }}</p>
+    <hr>
 
-    <br>
     <label for="common_template">{{ 'Common Experiment Template'|trans }}</label>
     <textarea style='height:400px' class='mceditable' name="common_template" id='common_template'>
         {{ teamConfigArr.common_template|raw }}
     </textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
+    <div class='mt-2 text-center'>
+      <button data-action='patch-team-common-template' data-id='{{ teamConfigArr.id }}' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+    </div>
+    <hr>
 
-    <br>
     <label for="common_template_md">{{ 'Common Experiment Template'|trans }} (Markdown)</label>
     <textarea style='height:400px' class='markdown-textarea' name="common_template_md" id='common_template_md'>{{ teamConfigArr.common_template_md|raw }}</textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
-
-    <div class='mt-4 text-center'>
-      <button data-action='patch-team-admin' data-id='{{ teamConfigArr.id }}' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+    <div class='mt-2 text-center'>
+      <button data-action='patch-team-common-template-md' data-id='{{ teamConfigArr.id }}' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
+
   </div>
 </div>
 
 <!-- TAB 2 TEAM GROUPS -->
 <div data-tabcontent='2' hidden>
-  <div class='box form-group'>
-    <h3>{{ 'Manage Groups of Users'|trans }}</h3>
-    <hr>
+  <p><a target='_blank' rel='noopener' href='https://doc.elabftw.net/admin-guide.html#groups-tab'>{{ 'Link to documentation'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></p>
+  <h3 class='p-2 pl-3 section-title'>{{ 'Create a group'|trans }}</h3>
 
-    <!-- CREATE A GROUP -->
-    <label for='teamGroupCreate'>{{ 'Create a group'|trans }}</label>
-    <input class='form-control col-md-4 custom-control-inline' id='teamGroupCreate' type='text' />
-    <button type='submit' data-action='create-teamgroup' data-teamid='{{ App.Users.userData.team }}' id='teamGroupCreateBtn' class='button btn btn-primary'>{{ 'Create'|trans }}</button>
-    <!-- END CREATE GROUP -->
-
-    <!-- SHOW EXISTING GROUPS -->
-    <div id='team_groups_div'>
-      <hr>
-      <h3>{{ 'Existing groups'|trans }}</h3>
-      {% for teamGroup in teamGroupsArr %}
-        <div class='box'>
-          <a class='clickable teamGroupDelete float-right' data-id='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>
-            <i class='fas fa-trash-alt'></i>
-          </a>
-          <h3 class='mb-2'><span data-teamid='{{ App.Users.userData.team }}' data-id='{{ teamGroup.id }}' class='malleableTeamgroupName hl-hover'>{{ teamGroup.name|raw }}</span></h3>
-          <div class='d-flex flex-wrap'>
-            {% for user in teamGroup.users %}
-              <span class='user-badge clickable rmUserFromGroup hover-danger' data-user='{{ user.userid }}' data-teamid='{{ App.Users.userData.team }}' data-group='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>{{ user.fullname|raw }}</span>
-            {% endfor %}
-          </div>
-          <input aria-label='{{ 'Add user'|trans }}' class='form-control col-md-4 autocompleteUsers d-block mt-2' data-teamid='{{ App.Users.userData.team }}' autocomplete='off' data-group={{ teamGroup.id }} placeholder='{{ 'Add user'|trans }}' type='text' />
-        </div>
-      {% endfor %}
+  <div class='pl-3 mt-2 mb-5'>
+    <div class='d-flex justify-content-between'>
+      <!-- CREATE A GROUP -->
+      <label for='teamGroupCreate' class='col-form-label'>{{ 'Name'|trans }}</label>
+      <input class='form-control col-md-4' id='teamGroupCreate' type='text' />
     </div>
+    <hr>
+    <div class='mt-2 text-center'>
+      <button type='submit' data-action='create-teamgroup' data-teamid='{{ App.Users.userData.team }}' id='teamGroupCreateBtn' class='button btn btn-primary'>{{ 'Create'|trans }}</button>
+    </div>
+    <!-- END CREATE GROUP -->
+  </div>
+
+  <!-- SHOW EXISTING GROUPS -->
+  <div id='team_groups_div'>
+    <h3 class='p-2 pl-3 section-title'>{{ 'Existing groups'|trans }}</h3>
+    {% for teamGroup in teamGroupsArr %}
+      <div class='box'>
+        <a class='clickable teamGroupDelete float-right' data-id='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>
+          <i class='fas fa-trash-alt'></i>
+        </a>
+        <h3 class='mb-2'><span data-teamid='{{ App.Users.userData.team }}' data-id='{{ teamGroup.id }}' class='malleableTeamgroupName hl-hover'>{{ teamGroup.name|raw }}</span></h3>
+        <div class='d-flex flex-wrap'>
+          {% for user in teamGroup.users %}
+            <span class='user-badge clickable rmUserFromGroup hover-danger' data-user='{{ user.userid }}' data-teamid='{{ App.Users.userData.team }}' data-group='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>{{ user.fullname|raw }}</span>
+          {% endfor %}
+        </div>
+        <input aria-label='{{ 'Add user'|trans }}' class='form-control col-md-4 autocompleteUsers d-block mt-2' data-teamid='{{ App.Users.userData.team }}' autocomplete='off' data-group={{ teamGroup.id }} placeholder='{{ 'Add user'|trans }}' type='text' />
+      </div>
+    {% endfor %}
   </div>
 </div>
 <!-- END TEAM GROUPS -->
@@ -172,29 +211,27 @@
 
 <!-- TAB 4 STATUS -->
 <div data-tabcontent='4' hidden>
-  <div class='box'>
-    <h3>{{ 'Add a New Status'|trans }}</h3>
+  <h3 class='p-2 pl-3 section-title'>{{ 'Add a New Status'|trans }}</h3>
+  <div class='pl-3 mt-2 mb-5'>
+    <div class='d-flex justify-content-between'>
+      <label for='statusName' class='col-form-label'>{{ 'Name'|trans }}</label>
+      <input class='form-control col-md-3' type='text' id='statusName' />
+    </div>
     <hr>
-    <div class='form-row align-items-center'>
-      <div class='col-auto'>
-        <label for='statusName'>{{ 'Name'|trans }}</label>
-        <input class='form-control' type='text' id='statusName' />
-      </div>
 
-      <div class='col-1'>
-        <label for='statusColor'>{{ 'Color'|trans }}</label>
-        <input class='form-control randomColor' type='color' id='statusColor' />
-      </div>
+    <div class='d-flex justify-content-between'>
+      <label for='statusColor' class='col-form-label'>{{ 'Color'|trans }}</label>
+      <input class='form-control randomColor col-md-3' type='color' id='statusColor' />
+    </div>
+    <hr>
 
-      <div class='col-auto mt-4'>
-        <button class='button btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='create-status'>{{ 'Save'|trans }}</button>
-      </div>
+    <div class='mt-3 text-center'>
+      <button class='button btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='create-status'>{{ 'Save'|trans }}</button>
     </div>
   </div>
 
-  <div class='box' id='statusBox'>
-    <h3>{{ 'Edit an Existing Status'|trans }}</h3>
-    <hr>
+    <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Edit an Existing Status'|trans }}</h3>
+    <div class='pl-3' id='statusBox'>
     <ul class='list-group sortable' data-axis='y' data-table='status'>
       {% for status in statusArr %}
         <li id='status_{{ status.category_id }}' data-statusid='status_{{ status.category_id }}' class='list-group-item'>
